petapp/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petapp-deployment-devops
spec:
  replicas: 1 # You can change the number of replicas as needed
  selector:
    matchLabels:
      app: petapp  # This label should match the selector in the Service
  template:
    metadata:
      labels:
        app: petapp  # This label should match the selector in the Service
    spec:
      containers:
      - name: petapp
        image: nit2925docker/devops-repo:4d1fac82fec6ea571698109ae1748ad23308159f # You can specify a different version if needed
      imagePullSecrets:
      - name: regcred
        ports:
        - containerPort: 8080  # This should match the targetPort in the Service
