petapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petapp-service
spec:
   type: ClusterIP
   selector:
     app: petapp
   ports:
     - protocol: TCP
       port: 8080
       targetPort: 8080
